# CPlusPlusThings

./: ..gitignore.un~  .README.md.un~  .com.sh.un~  .gitignore  0001-const.patch  README.md  README.md~  README1.md  README_EN.md  c program  demo.txt
.clwb/: .bazelproject
.clwb_/: .bazelproject
RRRun/: xh.md
Threading_In_CPlusPlus/: CMakeLists.txt
Threading_In_CPlusPlus/2.create_type/: 1.function_pointer.cpp  3.functor.cpp  4.no_static_member_function.cpp  5.static_member_function.cpp
Threading_In_CPlusPlus/3.join_detach/: detach.cpp
abstract/: README.md  interesting_facts3.cpp
assert/: README.md  iga  ignore_assert.c
basic_content/::/: ::
basic_content/abstract/: BUILD  README.md  abstract.cpp  abstract_base.h  derived_full.cpp  interesting_facts1.cpp  interesting_facts2.cpp  interesting_facts3.cpp  interesting_facts4.cpp  interesting_facts5.cpp  pure_virtual.cpp
basic_content/assert/: BUILD  README.md  assert  assert.c  ignore_assert.c
basic_content/bit/: BUILD  README.md  bit.cpp  learn.cpp
basic_content/c_poly/: BUILD  README.md  c++_examp  c++_examp.cpp  c_examp.c
basic_content/const/: BUILD  README.md  const_function.cpp  const_num.cpp
basic_content/decltype/: BUILD  README.md  decltype.cpp
basic_content/enum/: BUILD  README.md  classic_practice  classic_practice.cpp  tempCodeRunnerFile.cpp  tradition_color.cpp
basic_content/explicit/: BUILD  explicit.cpp
basic_content/friend/: BUILD  friend_class.cpp  friend_func.cpp
basic_content/func_pointer/: BUILD  func1  func_pointer.cpp
basic_content/inline/: BUILD  README.md  inline.cpp  inline.h  iv
basic_content/macro/: BUILD  do_while  do_while.cpp  sig_examp  sig_examp.cpp
basic_content/maohao/: .README.md.un~  BUILD  README.md  maohao.cpp
basic_content/pointer_refer/: BUILD  README.md  copy_construct.cpp  effec  effec.cpp
basic_content/sizeof/: BUILD  README.md  blackclass.cpp  genA.cpp  geninhe.cpp  moreinhe.cpp  morevir.cpp  static.cpp  virinhe.cpp  virmoreinhe.cpp
basic_content/static/: BUILD  README.md  nostatic_class.cpp  static_class.cpp  static_demo.cpp  static_error_variable.cpp  static_funciton.cpp  static_variable.cpp
basic_content/struct/: BUILD  README.md  ext_struct_func.cpp  stff  struct_func.c  struct_func.cpp  stu  (+1 more)
bit/: README.md
c++2.0/: README.md  auto.cpp  constexpr.cpp  default_delete.cpp  lambda.cpp  move.cpp  nullptr.cpp  rvalue.cpp  tuple.cpp  uniform_initialization.cpp
c_poly/: README.md
codingStyleIdioms/: .README.md.swp  README.md
const/: README.md
decltype/: README.md
effective_c++/: 2.cpp
effective_cpp/: BUILD
enum/: README.md  classic_practice.cpp
explicit/: README.md  explict
friend/: README.md
inline/: README.md  inline
learn_class/modern_C++_30/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~
learn_class/modern_C++_30/SFINAE/sfinae paper/: lambda.cpp  sizeof1.cpp
learn_class/modern_C++_30/compilercompute/: IF.cpp  WhileLoop.cpp  factorial.cpp  fmap.cpp
learn_class/modern_C++_30/constexpr/: a.out  container.cpp
learn_class/modern_C++_30/container2/: array.cpp  hash.cpp  unorder.cpp
learn_class/modern_C++_30/functionLambda/: function.cpp
learn_class/modern_C++_30/literalAssert/: assert.cpp  default_delete.cpp  overridefinal.cpp
learn_class/modern_C++_30/memorymodel_atomic/: lock_singleton.cpp
learn_class/modern_C++_30/reference/: forward.cpp  lifetime.cpp
learn_class/modern_C++_30/returnObj/: returnObj1.cpp  returnObj2.cpp  returnObj3.cpp  returnObj4.cpp
learn_class/modern_C++_30/smart_ptr/: auto_scope.cpp
modern_C++_30/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~
modern_C++_30/RAII/: stack.cpp
modern_C++_30/SFINAE/: SFINAE.cpp
modern_C++_30/SFINAE/sfinae paper/: blending1.cpp  blending2.cpp  constexpr.cpp  decltype.cpp  hana.cpp  is_valid.cpp  p2SFINAE.cpp  serialize.cpp  sizeof2.cpp
modern_C++_30/compilercompute/: a.out
modern_C++_30/compilerpoly/: README.md  template.cpp
modern_C++_30/constexpr/: newconstexpr.cpp  output_container.h  sqrt.cpp  test3.cpp
modern_C++_30/container1/: container.cpp  output_container.h  vector_l.cpp
modern_C++_30/container2/: priority_queue.cpp  relacontainer.cpp
modern_C++_30/exception/: exception.cpp
modern_C++_30/functionLambda/: adder.cpp  autoLambda.cpp
modern_C++_30/literalAssert/: literal.cpp
modern_C++_30/memorymodel_atomic/: static_local_singleton.cpp
modern_C++_30/returnObj/: all.cpp  returnObj5.cpp
modern_C++_30/smart_ptr/: shared_ptr.cpp  unique_ptr.cpp  unique_ptr_U.cpp
morden_C++_30/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~
pointer_refer/: README.md
practical_exercises/: .README.md.un~  README.md~
proj/: README.md
sizeof/: geninhe.cpp
static/: README.md  demo  static_variable.cpp
stl/: hashtable.md  iterator.md  traits.md  unordered_map.md
stl_src/: array.md  deque.md  iterator.md  list.md  map_multimap.md  myhashtable.md  queue_stack.md  rb_tree.md  typename.md  vector.md  谈谈STL设计之EBO优化.md
struct/: ext  ext_struct_func.cpp  struct_func.c  struct_func.cpp
struct_class/: README.md  ext  struct_func_func.cpp
tool/: C++的Debug工具dbg-macro.md  像Python一样玩CC++.md  用rr来进行debug.md
union/: README.md
using/: README.md  using_derived.cpp  using_global.cpp
virtual/: README.md
volatile/: README.md  volatile.cpp
vptr_vtable/: 深入浅出C++虚函数的vptr与vtable.md
(+584 files in other folders)
